Project

General

Profile

Actions

Bug #18476

closed

rgw: RGWUserInfo::system is wrongly handled in RGWHandler_REST_SWIFT

Added by Radoslaw Zarzynski over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The RGWUserInfo::system flag is wrongly handled in the Swift API implementation. In rare conditions this might result in setting req_state::system_request.

This may happen if both of those conditions are fulfilled:
  1. RadosGW is running in a multi-site configuration (at least one user with the system flag turned on is present),
  2. the rgw_swift_account_in_url configurable has been switched to true. The value is false by default and our documentation doesn't actually mention about the option.

The issue doesn't affect Jewel nor any previous release.

Actions #1

Updated by Radoslaw Zarzynski over 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Radoslaw Zarzynski over 7 years ago

  • Status changed from Fix Under Review to Resolved

The Kraken backport has been merged as well. See: https://github.com/ceph/ceph/pull/13006.

Actions

Also available in: Atom PDF